# lenia_rust

./: .gitignore  Cargo.toml
src/: main.rs
